--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,9 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="../front-end/style/style.css">
   </head>
   <body>
     <h1>Hello, world!</h1>
+
+    <div class="container mt-4 shadow-lg p-3 mb-5 bg-body rounded">
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCrear" data-bs-whatever="@mdo">Crear Inmueble</button>
+      <table id="tablainmueble" class="table mt-2 table-bordered table-striped">
+        <thead>
+        <tr class="text-center">
+          <th>Id</th>
+          <th>num</th>
+          <th>state</th>
+        </tr>
+      </thead>
+      </table>
+    </div>
+<!-- modal -->
+<div class="modal fade" id="modalCrear" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header bg-primary text-white" >
+        <h5 class="modal-title" id="exampleModalLabel">Introduzca el valor que correspondan al inmueble que desea crear </h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="num" class="col-form-label">Num:</label>
+            <input type="text" class="form-control" id="num">
+          </div>
+          <div class="mb-3">
+            <label for="state" class="col-form-label">State:</label>
+            <input type="number" class="form-control" id="state">
+          </div> 
+     
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="submit" class="btn btn-primary">Guardar</button>
+      </div>
+    </form>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="code.js"></script>
   </body>
 </html>
